--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1297,6 +1297,188 @@ button.footer-cart:hover {
 .grey {
     background-color: grey;
 }
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    .cart-hero {
+        width: 450px;
+        height: 160px;
+    }
+    .checkout-overlay {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background-color: black;
+        opacity: .8;
+        height: 160px;
+        width: 450px;
+    }
+    .cart-header {
+        font-family: graphiksemibold;
+        color: #232323;
+        display: block;
+        text-align: center;
+        font-size: 30px;
+        margin-top: 10px;
+    }
+    .cart-scroll {
+        overflow-y: scroll;
+        width: 450px;
+        height: 400px;
+    }
+    .cart-scroller {
+        overflow-x: hidden;
+        overflow-y: scroll;
+        height: 1000px;
+    }
+    .checkout-item {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin-left: 10px;
+        width: 200px;
+        height: 250px;
+        border-bottom: solid black 2px;
+        border-radius: 2px;
+        display: inline-block;
+        margin-top: 10px;
+        .item-type {
+            font-family: nittiblack;
+            font-size: 12px;
+            color: #b9b9b9;
+            text-transform: uppercase;
+            margin-left: 10px;
+        }
+        .item-name {
+            color: #232323;
+            font-family: graphiksemibold;
+            display: inline;
+            margin-left: 10px;
+        }
+        .item-price {
+            color: #b9b9b9;
+            font-family: graphikmedium;
+            font-size: 12px;
+            margin-left: 5px;
+            display: inline;
+        }
+        .checkout-img {
+            width: 200px;
+            height: 200px;
+        }
+    }
+    .discount-details {
+        display: block;
+        text-align: center;
+        color: #b9b9b9;
+        font-family: graphikmedium;
+    }
+    .space{
+        padding: 20px;
+    }
+    input.code {
+        color: #b9b9b9;
+        background: none;
+        border: solid 2px #b9b9b9;
+        border-radius: 3px;
+        padding: 10px 0px;
+        margin-left: 100px;
+        margin-bottom: 20px;
+    }
+    button.code-submit {
+        background: #232323;
+        color: #fff;
+        border-radius: 3px;
+        margin-left: 10px;
+        padding: 10px 10px;
+    }
+    i.code-arrow {
+        font-size: 12px;
+        margin-left: 5px;
+    }
+    .purchase {
+        color: #b9b9b9;
+        font-family: graphikregular;
+        text-align: center;
+    }
+    .cart-close {
+        font-family: graphikmedium;
+        color: #232323;
+        text-align: center;
+    }
+    .cart-shipping {
+        color: #b9b9b9;
+        text-decoration: underline;
+        font-size: 12px;
+        text-align: center;
+    }
+    .cart-footer {
+        background-color: #232323;
+        height: 50px;
+        bottom: 0;
+        position: fixed;
+        width: 100%;  
+        .cart-tax {
+            display: inline;
+            font-family: graphiksemibold;
+            color: #fff;
+            align-self: center;
+            margin: 0px 20px;
+            font-size: 10px;
+        }
+        .cart-total {
+            display: inline;
+            font-family: graphiksemibold;
+            color: #fff;
+            align-self: center;
+            font-size: 30px;
+            margin: 0px 20px;
+            position: relative;
+            bottom: -5px;
+        }
+        .checkout {
+            background-color: #fff;
+            border: none;
+            padding: 10px 20px;
+            color: #232323;
+            font-family: graphiksemibold;
+            font-size: 10px;
+            margin: 0px 20px;
+            .checkout-arrow {
+                font-size: 10px;
+                margin-left: 10px;
+            }
+        }
+    }
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 25px;
+    margin-left: 50px;
+}
+
 @media only screen and (min-width: 1366px) {
     body {
         margin: auto !important;
